--- a/mathmuncher/MathMuncherMain/MathMuncherMain/Lessons/Factors/Views/FactorsG7_1.xaml
+++ b/mathmuncher/MathMuncherMain/MathMuncherMain/Lessons/Factors/Views/FactorsG7_1.xaml
@@ -91,7 +91,7 @@
     						</DiscreteObjectKeyFrame>
     					</ObjectAnimationUsingKeyFrames>
     					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)" Storyboard.TargetName="textBlock3">
-    						<DiscreteObjectKeyFrame KeyTime="0" Value=" = 10 ÷  1  = 10      10 ÷  2  = 5      10 ÷  5  = 2      10 ÷  10 = 1"/>
+    						<DiscreteObjectKeyFrame KeyTime="0" Value=" = 10 ÷  1  = 10      10 ÷  2  = 5      10 ÷  5  = 2      10 ÷ 10 = 1"/>
     					</ObjectAnimationUsingKeyFrames>
     					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="tbLessonIntro" d:IsOptimized="True"/>
     					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="tbHeading1" d:IsOptimized="True"/>
@@ -261,6 +261,62 @@
     					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="tbHeading1" d:IsOptimized="True"/>
     					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="tbLessonIntro" d:IsOptimized="True"/>
     					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="cmdPrevious" d:IsOptimized="True"/>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Left)" Storyboard.TargetName="Yes_tick">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>230.265</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Top)" Storyboard.TargetName="Yes_tick">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>3.458</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Left)" Storyboard.TargetName="Yes_tick_Copy">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>230.265</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Top)" Storyboard.TargetName="Yes_tick_Copy">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>30.547</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Left)" Storyboard.TargetName="Yes_tick_Copy1">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>230.265</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Top)" Storyboard.TargetName="Yes_tick_Copy1">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>54.195</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Left)" Storyboard.TargetName="Yes_tick_Copy2">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>230.265</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Canvas.Top)" Storyboard.TargetName="Yes_tick_Copy2">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Double>79.243</System:Double>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
     				</Storyboard>
     			</VisualState>
     			<VisualState x:Name="LessonState3">
@@ -539,11 +595,11 @@
                 		<TextBlock x:Name="F" Height="23" TextWrapping="Wrap" Width="11.059" FontFamily="AmerType Md BT" Text="F" FontSize="24"/>
                 		<TextBlock x:Name="Factor" Height="21.332" Canvas.Left="12.059" TextWrapping="Wrap" Canvas.Top="14" Width="24.073" Text="10" FontFamily="AmerType Md BT" FontSize="13.333"/>
                 	</Canvas>
-                	<TextBlock x:Name="textBlock3" Height="99.433" Canvas.Left="40.102" TextWrapping="Wrap" Canvas.Top="2" Width="225.206" FontFamily="AmerType Md BT" FontSize="20" Text=" = 10 ÷  1  = 10      10 ÷  2  = 5      10 ÷  5  = 2      10 ÷  10 = 1"/>
-                	<Ellipse Height="27" Canvas.Left="128.65" Canvas.Top="3.69" Width="27" Stroke="Black"/>
-                	<Ellipse Height="27" Canvas.Left="130.65" Canvas.Top="32.69" Width="27" Stroke="Black"/>
-                	<Ellipse Height="27" Canvas.Left="130.65" Canvas.Top="59.69" Width="27" Stroke="Black"/>
-                	<Ellipse Height="35" Canvas.Left="134.15" Canvas.Top="85.19" Width="35" Stroke="Black"/>
+                	<TextBlock x:Name="textBlock3" Height="99.433" Canvas.Left="40.102" TextWrapping="Wrap" Canvas.Top="2" Width="225.206" FontFamily="AmerType Md BT" FontSize="21.333" Text=" = 10 ÷  1  = 10      10 ÷  2  = 5      10 ÷  5  = 2      10 ÷ 10 = 1"/>
+                	<Ellipse Height="23.648" Canvas.Left="130.402" Canvas.Top="2" Width="23.648" Stroke="Black"/>
+                	<Ellipse Height="23.647" Canvas.Left="133.467" Canvas.Top="29.09" Width="23.648" Stroke="Black"/>
+                	<Ellipse Height="23.648" Canvas.Left="133.467" Canvas.Top="52.737" Width="23.648" Stroke="Black"/>
+                	<Ellipse Height="30.655" Canvas.Left="130.402" Canvas.Top="76.385" Width="30.655" Stroke="Black"/>
                 	<Viewbox x:Name="Yes_tick" Height="22.19" Canvas.Left="239.598" Width="20.809" Canvas.Top="8.5">
                 		<Grid Height="39.2970008850098" Width="49.7459983825684">
                 			<Path Data="F1M391.8809,426.0098C391.7349,426.0098,391.5889,426.0028,391.4419,425.9888C390.0359,425.8598,388.7609,425.1098,387.9629,423.9448L377.5149,408.6928C376.0329,406.5298,376.5859,403.5728,378.7489,402.0918C380.9129,400.6098,383.8689,401.1608,385.3509,403.3248L392.5669,413.8598L418.3219,388.1028C420.1769,386.2498,423.1829,386.2498,425.0379,388.1028C426.8929,389.9578,426.8929,392.9648,425.0379,394.8198L395.2389,424.6188C394.3439,425.5138,393.1339,426.0098,391.8809,426.0098" Fill="#FF0CC43C" Stretch="Fill"/>
@@ -569,7 +625,7 @@
                 		</Grid>
                 	</Viewbox>
                 </Canvas>
-                <Canvas x:Name="Faktore_Visual2" Height="91.173" Canvas.Left="479.033" Opacity="0" Canvas.Top="265.827" Width="329.351">
+                <Canvas x:Name="Faktore_Visual2" Height="91.173" Canvas.Left="479.033" Opacity="0" Canvas.Top="265.827" Width="329.351" d:IsHidden="True">
                 	<Path x:Name="Path" Width="107.536" Height="21.5" Canvas.Left="152.959" Stretch="Fill" StrokeLineJoin="Round" Stroke="#FF000000" Data="F1 M 0.5,21C 0.5,9.67819 14.8269,0.499969 32.5,0.499969C 50.1731,0.499969 64.5,9.67819 64.5,21" Canvas.Top="-8.501"/>
                 	<Path x:Name="Path_Copy" Width="44.533" Height="9" Canvas.Left="180.959" Stretch="Fill" StrokeLineJoin="Round" Stroke="#FF000000" Data="F1 M 0.5,21C 0.5,9.67819 14.8269,0.499969 32.5,0.499969C 50.1731,0.499969 64.5,9.67819 64.5,21" Canvas.Top="3.999"/>
                 	<TextBlock x:Name="textBlock" Height="34.735" Canvas.Left="33.084" TextWrapping="Wrap" Text="Die" Canvas.Top="22.878" Width="72.129" FontFamily="AmerType Md BT" FontSize="24"/>
@@ -577,9 +633,9 @@
                 		<TextBlock x:Name="F1" Height="23" TextWrapping="Wrap" Width="11.059" FontFamily="AmerType Md BT" Text="F" FontSize="24"/>
                 		<TextBlock x:Name="Factor2" Height="21.332" Canvas.Left="12.059" TextWrapping="Wrap" Canvas.Top="14" Width="24.073" Text="10" FontFamily="AmerType Md BT" FontSize="13.333"/>
                 	</Canvas>
-                	<TextBlock x:Name="tbLine2" Height="34.735" Canvas.Left="101" TextWrapping="Wrap" Canvas.Top="8" Width="220.351" FontFamily="AmerType Md BT" FontSize="20" Opacity="0" Text="   1 x  10 = __"/>
-                	<TextBlock x:Name="textBlock_Copy2" Height="31.907" Canvas.Left="127.125" TextWrapping="Wrap" Canvas.Top="39.166" Width="166.393" FontFamily="AmerType Md BT" FontSize="20" Opacity="0" Text="   2 x  5   = __"/>
-                	<TextBlock x:Name="textBlock_Copy" Height="31.907" Canvas.Left="127.125" TextWrapping="Wrap" Canvas.Top="39.166" Width="225.094" FontFamily="AmerType Md BT" FontSize="20" Opacity="0" Text="=  { 1,  2,  5,  10 }"/>
+                	<TextBlock x:Name="tbLine2" Height="34.735" Canvas.Left="101" TextWrapping="Wrap" Canvas.Top="8" Width="220.351" FontFamily="AmerType Md BT" FontSize="21.333" Opacity="0" Text="   1 x  10 = __"/>
+                	<TextBlock x:Name="textBlock_Copy2" Height="31.907" Canvas.Left="127.125" TextWrapping="Wrap" Canvas.Top="39.166" Width="166.393" FontFamily="AmerType Md BT" FontSize="21.333" Opacity="0" Text="   2 x  5   = __"/>
+                	<TextBlock x:Name="textBlock_Copy" Height="31.907" Canvas.Left="127.125" TextWrapping="Wrap" Canvas.Top="39.166" Width="225.094" FontFamily="AmerType Md BT" FontSize="21.333" Opacity="0" Text="=  { 1,  2,  5,  10 }"/>
                 </Canvas>
     		</Canvas>
     		<TextBox x:Name="txtHidden" Height="10" Canvas.Left="221.848" TextWrapping="Wrap" Text="TextBox" Canvas.Top="624.767" Width="10" BorderThickness="0" FontSize="8" Opacity="0" d:IsHidden="True"/>
