--- a/mathmuncher/MathMuncherMain/MathMuncherMain/App.xaml
+++ b/mathmuncher/MathMuncherMain/MathMuncherMain/App.xaml
@@ -1,12 +1,13 @@
-﻿<Application   
-  x:Class="MathMuncherMain.App"
+﻿<Application
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"   
+  x:Class="MathMuncherMain.App"
+  >
 
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Assets/Styles.xaml"/>
+      	<ResourceDictionary Source="Assets/Styles.xaml"/>
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
   </Application.Resources>
